--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -11,17 +11,18 @@ on:
 
 jobs:
   test:
-    runs-on : ubuntu-latest
+    runs-on: ubuntu-latest
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Set up python
+    - name: Set up Python
       uses: actions/setup-python@v2
       with:
-           python-version: '3.8'
-    - name: Install Dependency
+        python-version: '3.8'
+
+    - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
